# discord-bot

./: .gitignore  CMakeLists.txt  README.md  app.py  stt.py
cmake/: CMakeCache.txt  FindDPP.cmake
src/: main.cpp  token.h
